# goit-pythonweb-hw-10

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 44aae8e48aae_add_to_model_user_role.py  987317ddbfa3_add_to_model_user_email_and_avatar.py  9fcfabdf3ab7_init.py  ee72a0338de7_init.py
src/config/: config.py  constants.py  messages.py
src/core/: depend_service.py  email_token.py
src/database/: db.py
src/entity/: models.py
src/repositories/: base_repository.py  contacts_repository.py  refresh_token_repository.py  user__repository.py  user_repository.py
src/repository/: contacts.py
src/routes/: auth_route.py  contacts.py  contacts_route.py  users_route.py
src/schemas/: contacts.py  token.py  user_schema.py
src/services/: auth_services.py  contact_services.py  contacts.py  email_services.py  upload_file_services.py  user_services.py
src/services/templates/: verify_email.html
